# CaptureLive

./: .gitignore  LICENSE  README.md  capturelive.cmd  capturelive.sh  pyproject.toml  requirements.txt
capturelive/: __main__.py
capturelive/cli/: main.py
capturelive/config/: config_manager.py  default_config.json
capturelive/core/: service_loop.py
capturelive/input/: input_controller.py
capturelive/minecraft/: minecraft_detector.py
capturelive/utils/: logger.py
capturelive/vision/: motion_engine.py
release/: README.txt
scripts/: build_windows.bat  build_windows.ps1
